--- a/public/css/new-game.css
+++ b/public/css/new-game.css
@@ -67,7 +67,8 @@ html {
     width: 100%;
     height: 35px;
     color: var(--gris);
-    border: 1px solid var(--cian);
+    border-bottom: 1px solid var(--cian);
+    border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.925);
     text-align: center;
 }
