EDIT views formularios

--- a/src/views/new-game.ejs
+++ b/src/views/new-game.ejs
@@ -6,24 +6,20 @@
 <body class="body-new-game">
     <main class="container-m">
         <form action="/new-game" method="POST" class="container-form">
-            <h1>Editar/Añadir Juego</h1>
+            <h1>Editar/Añadir Juego <i class="fas fa-gamepad"></i></h1>
             <div class="contenido-principal"> 
                 <div class="box-container">
-                <label class="tittle-m block">Nombre</label>
-                <input name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
+                <input placeholder= "Título" name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
                 </div>
     
                 <div class="box-container">
-                    <label class="tittle-m block">Precio</label>
-                    <input name="price" type="number" required class="input-style">
+                    <input placeholder= "Precio" name="price" type="number" required class="input-style">
                 </div>
                 <div class="box-container">
-                    <label class="tittle-m block">Descuento</label>
-                    <input name="discount" type="number" class="input-style">
+                    <input placeholder= "Descuento" name="discount" type="number" class="input-style">
                 </div>
                 <div class="box-container">
-                    <label class="tittle-m block">Características</label>
-                    <input name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
+                    <input placeholder="Características" name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
                 </div>
                 <div class="box-container">
                     <label class="tittle-m block">Dificultad</label>
@@ -93,16 +89,13 @@
                     <input class="block" type="file" name="photoGame">
                 </div>
                 <div class="box-container">
-                    <label class="tittle-m block">Datos Técnicos</label>
-                    <input name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
+                    <input placeholder= "Datos técnicos" name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
                 </div>
                 <div class="box-container">
-                    <label class="tittle-m block">Requisitos del Sistema</label>
-                    <input name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
+                    <input placeholder= "Requisitos del sistema" name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
                 </div>
                 <div class="box-container">
-                    <label class="tittle-m block">Información Legal del Desarrollador</label>
-                    <input name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
+                    <input placeholder= "Información legal del desarrollador" name="nombre" type="text" placholder="Nombre del Juego" required class="input-style">
                 </div>
     
             </div>
