--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -7,7 +7,7 @@
         <button id="cart"><i class="fas fa-shopping-cart"></i></button>
         <form action="/registro" method="POST" class="registro-box-fianriel">
             <h1>
-                Iniciar Sesión
+                Iniciar Sesión <i class="fas fa-gamepad"></i>
             </h1>
             <br>
             <section class="section-fianriel">
@@ -23,9 +23,9 @@
                 <article class="article-fianriel">
 
                     <div>
-                        <label>Clave</label><br>
+                        <label>Contraseña</label><br>
                         <input required placholder="" type="password" name="clave" class="input-fianriel"><br>
-                        <label>Me olvidé de algo</label>
+                        <label>Me olvidé de algo...</label>
                     </div>
 
                 </article>
