--- a/public/css/styles-productDetail.css
+++ b/public/css/styles-productDetail.css
@@ -159,6 +159,14 @@ a:active {
     background-color: #FF00d6;
 }
 
+.cart-mc:hover{
+cursor: pointer;
+color: white;
+-webkit-box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
+-moz-box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
+box-shadow: 0px 13px 51px -2px rgba(173,16,173,1);
+}
+
 .esrb {
     display: flex;
     flex-direction: column;
