[add] CRUD-GET de products

--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -14,7 +14,7 @@
             <h6>BLOWFISH STUDIOS PTY LTD</h6>
             <p>PS4/ PS5 / PC</p>
         </div>
-        <p class="precio-mc">$225</p>
+        <p class="precio-mc"><%= product.price %></p>                                       <!--  ejemplo de parametrized object  -->
         <div class="esrb-buy">
             <div class="buy-mc">
                 <button class="cart-mc">Agregar al carrito <i class="fas fa-cart-plus"></i></button>
