--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -8,6 +8,7 @@
         <link href='/css/styles-shoppingcart.css' rel="stylesheet">
         <link href='/css/styles-signUp.css' rel="stylesheet">
         <link href='/css/new-game.css' rel="stylesheet">
+        <link href='/css/styles-productList.css' rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
