--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,10 +4,10 @@
     </div>
     <nav class="main-navbar">
         <ul>
-            <li class="primer-color">Plataforma <i class="fas fa-caret-down"></i></li>
-            <li class="segundo-color">Edades <i class="fas fa-caret-down"></i></li>
-            <li class="tercer-color">Dificultad <i class="fas fa-caret-down"></i></li>
-            <li class="cuarto-color">Categorías <i class="fas fa-caret-down"></i></li>
+            <li class="primer-color">Plataforma <i id='fas' class="fas fa-caret-down"></i></li>
+            <li class="segundo-color">Edades <i id='fas' class="fas fa-caret-down"></i></li>
+            <li class="tercer-color">Dificultad <i  id='fas' class="fas fa-caret-down"></i></li>
+            <li class="cuarto-color">Categorías <i id='fas'  class="fas fa-caret-down"></i></li>
         </ul>
     </nav>
     <div class="barra-busqueda">
@@ -16,7 +16,7 @@
             <i id="find" class="fas fa-search"></i><br>
         </div>
             <div class="log-sign">
-                Log in / Sign up <i class="fas fa-gamepad"></i>
+                Log in / Sign up <i  id='fas' class="fas fa-gamepad"></i>
             </div>
         </div>
     <div class= "menu-desplegable">
