--- a/public/css/styles-signUp.css
+++ b/public/css/styles-signUp.css
@@ -1,5 +1,4 @@
 * {
-    font-family: 'Lato';
     color: #d9d9d9;
     box-sizing: border-box;
     margin: 0;
@@ -56,7 +55,8 @@ header{
     font-weight: bold;
     padding-bottom: 50px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    font-family: 'Lato';
 }
 /*Fianriel start*/
 
