--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,24 +1,24 @@
 <footer>
     <div>
-        <img class="img-logo-footer" src="/images/favicon-96x96.png" alt="GameStore"> 
+        <a href="/home"><img class="img-logo-footer" src="/images/favicon-96x96.png" alt="GameStore"></a>
     </div>
     <div class="redes-sociales">
-        <i id="redes"class="fab fa-twitter-square"></i>
-        <i id="redes"class="fab fa-facebook-square"></i>
-        <i id="redes"class="fab fa-instagram-square"></i>
+        <a href="http://twitter.com/GameStore"><i id="redes"class="fab fa-twitter-square"></i></a>
+        <a href="http://facebook.com/GameStore"><i id="redes"class="fab fa-facebook-square"></i></a>
+        <a href="http://instagram.com/GameStore"><i id="redes"class="fab fa-instagram-square"></i></a>
     </div>
     <div class="links-footer">
         <div class="first-column">
-            <p>Publicar en GameStore</p>
-            <p>Trabajá con nosotros</p>
-            <p>Acerca de la compañía</p>
-            <p>Política de privacidad</p>
+            <p><a href="#">Publicar en GameStore</a></p>
+            <p><a href="#">Trabajá con nosotros</a></p>
+            <p><a href="#">Acerca de la compañía</a></p>
+            <p><a href="#">Política de privacidad</a></p>
         </div>
         <div class="second-column">
-            <p>Política de reembolso de la tienda</p>
-            <p>Seguridad de la cuenta</p>
-            <p>Club GameStore</p>
-            <p>Newsletter</p>
+            <p><a href="#">Política de reembolso de la tienda</a></p>
+            <p><a href="#">Seguridad de la cuenta</a></p>
+            <p><a href="#">Club GameStore</a></p>
+            <p><a href="#">Newsletter</a></p>
         </div>
     </div>
     <div class="informacion-legal-footer">
