--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <div class="img-logo-header">
-        <img id="logo-header"src="/images/favicon-96x96.png" alt="GameStore">
+        <a href="/home"><img id="logo-header"src="/images/favicon-96x96.png" alt="GameStore"></a>
     </div>
     <nav class="main-navbar">
         <ul>
@@ -16,7 +16,7 @@
             <i id="find" class="fas fa-search"></i><br>
         </div>
             <div class="log-sign">
-                Log in / Sign up <i  id='fas' class="fas fa-gamepad"></i>
+                <a href="/log-in">Log in</a> / <a href="/sign-up">Sign up</a> <i  id='fas' class="fas fa-gamepad"></i>
             </div>
         </div>
     <div class= "menu-desplegable">
