--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -89,7 +89,7 @@
             <a href="https://www.blowfishstudios.com/privacy">BLOWFISH STUDIOS PTY LTD Privacy Policy & EULA</a>
         </div>
     </section>
-    <button id="cart"><i class="fas fa-shopping-cart"></i></button>
+    <a href="/shopping-cart"><button id="cart"><i class="fas fa-shopping-cart"></i></button></a>
 </main>
     <%- include('./partials/footer') %> 
 </body>
