--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -217,6 +217,6 @@
         </div>
         </main>
         <%- include('./partials/footer') %> 
-        <button id="cart"><i id="fas"class="fas fa-shopping-cart"></i></button>
+        <a href="/shopping-cart"><button id="cart"><i class="fas fa-shopping-cart"></i></button></a>
     </body>
     </html>
