--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -34,7 +34,7 @@
                 <button type="submit" class="send-buttom">Entrar</button>
             </section>
         </form>
-
+        <a href="/shopping-cart"><button id="cart"><i class="fas fa-shopping-cart"></i></button></a>
     </main>
     <%- include('./partials/footer') %> 
 </body>
