--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -116,6 +116,7 @@
 
 
         </form>
+        <a href="/shopping-cart"><button id="cart"><i class="fas fa-shopping-cart"></i></button></a>
     </main>
 </body>
 <%- include('./partials/footer') %> 
