--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -132,6 +132,7 @@
 
 
         </div>
+        <a href="/shopping-cart"><button id="cart"><i class="fas fa-shopping-cart"></i></button></a>
     </main>
     <%- include('./partials/footer') %>
 </body>
