--- a/public/css/styles-shoppingcart.css
+++ b/public/css/styles-shoppingcart.css
@@ -59,7 +59,7 @@ header {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 30px;
+    padding-top: 20px;
 }
 
 .contenedor-productos-carro {
@@ -541,7 +541,6 @@ footer {
         transition: all 1000ms;
     }
     .main_shopping_cart{
-        padding-top: 5.6%;
-        padding-bottom: 5.6%;
+        padding-bottom: 30px;
     }
 }
