EDIT views products/shoppingcart

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%- include('./partials/head') %>
     <%- include('./partials/header') %>
+    <div id="relleno"></div>
     <body class="body-productlist">
         <main class="main-productlist">
             <section class="product-filter">
