--- a/src/views/shoppingcart.ejs
+++ b/src/views/shoppingcart.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include('./partials/head') %>
     <%- include('./partials/header') %>
-
+    <div id="relleno"></div>
         <body class="body_shopping_cart">
             <main class="main_shopping_cart">
                 <div class="contenedor-productos-carro">
