--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -9,7 +9,7 @@
     <main class="main-home">
         <div class="container">
             <div class="lanzamientos">
-                <img class="imagen img-lanzamiento" src="/images/family-disruption1.jpg" alt="Family Disruption">
+                <img class="img-lanzamiento" src="/images/family-disruption1.jpg" alt="Family Disruption">
             </div>
             <section class="container-bs">
                 <h2 class="tittle">Más Vendidos</h2>
@@ -27,7 +27,7 @@
                                 <p class="discount">15% off</p>
                             </div>
                             <a href="#">
-                                <button class="button">Ver Juego</button>
+                                <button class="button">Agregar al carrito  <i class="fas fa-shopping-cart"></i></button>
                             </a>
                         </div>
                     </article>
@@ -43,7 +43,7 @@
                                 <p class="discount">10% off</p>
                             </div>
                             <a href="#">
-                                <button class="button">Ver Juego</button>
+                                <button class="button">Agregar al carrito  <i class="fas fa-shopping-cart"></i></button>
                             </a>
                         </div>
                     </article>
@@ -60,7 +60,7 @@
                                 <p class="discount">15% off</p>
                             </div>
                             <a href="#">
-                                <button class="button">Ver Juego</button>
+                                <button class="button">Agregar al carrito  <i class="fas fa-shopping-cart"></i></button>
                             </a>
                         </div>
                     </article>
@@ -77,7 +77,7 @@
                                 <p class="discount">35% off</p>
                             </div>
                             <a href="#">
-                                <button class="button">Ver Juego</button>
+                                <button class="button">Agregar al carrito  <i class="fas fa-shopping-cart"></i></button>
                             </a>
                         </div>
                     </article>
