[ADD] MULTER support

--- a/src/views/new-game.ejs
+++ b/src/views/new-game.ejs
@@ -5,7 +5,7 @@
 
 <body class="body-new-game">
     <main class="container-m">
-        <form action="/products/create" method="POST" class="container-form">
+        <form action="/products/create" method="POST" class="container-form" enctype="multipart/form-data">
             <h1>Editar/Añadir Juego <i class="fas fa-gamepad"></i></h1>
             <div class="contenido-principal"> 
                 <div class="box-container">
