edité edit-game ejs

--- a/src/views/edit-game.ejs
+++ b/src/views/edit-game.ejs
@@ -99,12 +99,12 @@
                 </div>
     
             </div>
-            <div class="container-button">
+            <div class="container-delete-button">
                 <div class="box-button">
-                    <button type="submit" class="send-button-m">Editar Juego</button>
+                    <button type="submit" class="delete-button-m">Editar Juego</button>
                 </div>
                 <div class="box-button">
-                    <button type="submit" class="send-button-m">Añadir Juego</button>
+                    <button type="submit" class="delete-button-m">Eliminar Juego</button>
                 </div>
             </div>
 
