--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,12 +3,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='/css/normalize.css' rel="stylesheet">
-        <link href='/css/styles-productDetail.css' rel="stylesheet">
-        <link href='/css/styles-home.css' rel="stylesheet">
-        <link href='/css/styles-shoppingcart.css' rel="stylesheet">
-        <link href='/css/styles-signUp.css' rel="stylesheet">
-        <link href='/css/new-game.css' rel="stylesheet">
-        <link href='/css/styles-productList.css' rel="stylesheet">
+        <link href="/css/styles.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
