--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
     <div class="img-logo-header">
         <a href="/home"><img id="logo-header"src="/images/favicon-96x96.png" alt="GameStore"></a>
     </div>
