EDIT productDetail parámetros

--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -45,69 +45,17 @@
                         <h4 class="h4-mc">Datos técnicos</h4>
                         <div class="datos-tecnicos">
                             <p>
-                                <%= product.players %>
-                            </p>
-                            <p>Plataforma:
-                                <%= product.plataforma %>
-                            </p>
-                            <p>Lanzamiento:
-                                <%= product.release %>
-                            </p>
-                            <p>Editor:
-                                <%= product.editor %>
-                            </p>
-                            <p>Categoria:
-                                <%= product.categoryOption %>
-                            </p>
-                            <p>Idiomas de pantalla:
-                                <%= product.idioma %>
+                                <%= product.datos_Tecnicos %>
                             </p>
                         </div>
                     </div>
                     <div class="requisitos-pc">
                         <h4 class="h4-mc">Requisitos del sistema</h4>
                         <div class="requisitos-min">
-                            <h6>MÍNIMO:</h6>
-                            <p>Requiere un procesador y un sistema operativo de 64 bits</p>
-                            <p>SO:
-                                <%= product.so %>
-                            </p>
-                            <p>Procesador:
-                                <%= product.procesador %>
-                            </p>
-                            <p>Memoria:
-                                <%= product.ram %>
-                            </p>
-                            <p>Gráficos:
-                                <%= product.graphic %>
-                            </p>
-                            <p>DirectX:
-                                <%= product.directx %>
-                            </p>
-                            <p>Almacenamiento:
-                                <%= product.storage %>
-                            </p><br>
-                            <h6>RECOMENDADO:</h6>
-                            <p>Requiere un procesador y un sistema operativo de 64 bits</p>
-                            <p>SO:
-                                <%= product.so %>
-                            </p>
-                            <p>Procesador:
-                                <%= product.procesador %>
-                            </p>
-                            <p>Memoria:
-                                <%= product.ram %>
-                            </p>
-                            <p>Gráficos:
-                                <%= product.graphic %>
-                            </p>
-                            <p>DirectX:
-                                <%= product.directx %>
-                            </p>
-                            <p>Almacenamiento:
-                                <%= product.storage %>
-                            </p><br>
-                            <p>Requiere un procesador y un sistema operativo de 64 bits</p>
+                                <p>
+                                    <%= product.requisitos %>
+                                </p>
+                                
                         </div>
                     </div>
                 </section>
