EDIT product nuevo parametros

--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -26,6 +26,7 @@
                         </div>
                         <p class="precio-mc">
                             <%= product.price %>
+                            <%= product.discount %>
                         </p>
                         <div class="esrb-buy">
                             <div class="buy-mc">
